adding code for Activity selection

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css" />
   <link rel="stylesheet" href="https://video-react.github.io/assets/video-react.css" />
   <link href="https://fonts.googleapis.com/css2?family=Wendy+One&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a23ff832e8.js" crossorigin="anonymous"></script>
   <title>Date Create</title>
 </head>
 
